--- a/styles.css
+++ b/styles.css
@@ -5,66 +5,11 @@ html, body {
   font-size: 18px;
 }
 
-@media (min-width: 1000px) {
-  .container {
-    display: grid;
-    grid-template-columns: 120px 70% auto 1em;
-    grid-template-rows: auto auto;
-    grid-template-areas:
-      "logo primary-links account-links spacer"
-      "spacer2 secondary-links secondary-links secondary-links";
-  }
-  .logo {
-    grid-area: logo;
-    background-color: #000759;
-    color: white;
-  }
-  .primary-links {
-    grid-area: primary-links;
-    background-color: #000759;
-    color: white;
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-around;
-  }
-  .secondary-links {
-    grid-area: secondary-links;
-    background: #ddd;
-    display: flex;
-    flex-flow: row nowrap;
-    padding-left: 1em;
-  }
-  .account-links {
-    grid-area: account-links;
-    background-color: #4b71e1;
-    color: white;
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-around;
-    font-size: .85em;
-  }
-  .hamburger-menu {
-    grid-area: spacer;
-    background: #000759;
-  }
-  .spacer2 {
-    grid-area: spacer2;
-    background: #4b71e1;
-  }
-  .logo, .primary-links, .account-links, .secondary-links div {
-    padding: 1em .33em;
-  }
-  .divider {
-    font-size: .4em;
-    position: relative;
-    top: 2.2em;
-    margin: 0 1em;
-  }
-  .hamburger-menu div, .avatar, .icons {
-    display: none;
-  }
+.logo {
+  border: 1px dotted white;
 }
 
+/* touch devices */
 @media (max-width: 1000px) {
   .container {
     color: white;
@@ -98,7 +43,78 @@ html, body {
     justify-content: space-between;
     background: #4b71e1;
   }
+  .account-links div {
+    padding-top: 1em;
+    color: red;
+  }
   .avatar, .logo, .hamburger-menu, .icons {
     padding: 1em;
+  }
+}
+
+/* desktop on up */
+@media (min-width: 1000px) {
+  .container {
+    display: grid;
+    grid-template-columns: 120px 70% auto 1em;
+    grid-template-rows: auto auto;
+    grid-template-areas:
+      "logo primary-links account-links spacer"
+      "spacer2 secondary-links secondary-links secondary-links";
+  }
+  .logo {
+    grid-area: logo;
+    background-color: #000759;
+    color: white;
+    font-weight: 100;
+    text-align: center;
+  }
+  .primary-links {
+    grid-area: primary-links;
+    background-color: #000759;
+    color: white;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-around;
+  }
+  .secondary-links {
+    grid-area: secondary-links;
+    background: #ddd;
+    display: flex;
+    flex-flow: row nowrap;
+    padding-left: 1em;
+  }
+  .account-links {
+    grid-area: account-links;
+    background-color: #4b71e1;
+    color: white;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-around;
+    position: relative;
+  }
+  .account-links > div {
+    font-size: .8em;
+    padding-top: .2em;
+  }
+  .hamburger-menu {
+    grid-area: spacer;
+    background: #000759;
+  }
+  .spacer2 {
+    grid-area: spacer2;
+    background: #4b71e1;
+  }
+  .logo, .primary-links, .account-links, .secondary-links div {
+    padding: 1em .33em;
+  }
+  .divider {
+    font-size: .4em;
+    position: relative;
+    top: 2.2em;
+    margin: 0 1em;
+  }
+  .hamburger-menu div, .avatar, .icons {
+    display: none;
   }
 }
